# music_storage_API

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: entrypoint-web.sh
requirements/: dev.txt
src/: db.sqlite3  settings.py  urls.py
src/music_store/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/music_store/migrations/: 0001_initial.py
